--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </form>
         <div class="weather-status text-white text-center">
-            <img src="images/bg" alt="">
+            <img src="https://openweathermap.org/img/wn/02n@2x.png" alt="">
             <h1 id="name">City</h1>
             <h3 ><span id="temp">0</span>&deg;C</h3>
             <h1 id="lead"></h1>
